--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,11 @@ block content
 					a(href='#') Home
 				li(class='active')
 					a(href='#') About
-				li(class='active')
+				li(class='dropdown-toggle')
 					a(href='#') Contact
 				li(class='dropdown')
+					a(class='dropdown-toggle' href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false')
+						span(class='caret') Dropdown
 					ul(class='dropdown-menu')
 						li
 							a(href='#') Another action
