add home content

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,10 @@
 doctype html
-html
+html(lang="en")
 	head
-		title= title
+		meta(charset='utf-8')
+		title Portfolio
+		meta(name='description' content='simple portfolio')
+		meta(name='author' content='ivg')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
 		script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js") 
