--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,35 @@
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.video-section {
+	padding-top: 50px;
+	height: 100vh;
+}
+
+.ava img {
+	margin-left: 40%;
+	/*margin-right: 30%;*/
+	
+	width: 20%;
+	height: 20%;
+	border-radius: 50%;
+}
+
+
+h1 {
+	font-size: 250% !important;
+	text-align: center;
+	font-weight: 300 !important;
+}
+
+h2 {
+	font-size: 180% !important;
+	text-align: center;
+	font-weight: 100 !important;
 }
