--- a/views/index.pug
+++ b/views/index.pug
@@ -7,19 +7,29 @@ block content
 				li(class='active')
 					a(href='#') Home
 				li(class='active')
-					a(href='#') About
+					a(href='#') Stack & Philosophy
 				li(class='dropdown-toggle')
 					a(href='#') Contact
 				li(class='dropdown')
 					a(class='dropdown-toggle' href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false')
-						span(class='caret') Dropdown
+						span(class='caret') Portfolio
 					ul(class='dropdown-menu')
 						li
 							a(href='#') Another action
 						li
-							a(href='#') Action
+							a(href='#') Action2
+						li
+							a(href='#') Action3
+
 			div(class='navbar-header')
-	div(class='container-fluid')
+
+
+	section(class='container-fluid video-section')
+		div(class='row')
+			div(class='col-md-6 col-md-offset-3 ava')
+				img(src='http://lorempixel.com/image_output/people-q-c-661-650-8.jpg')
+				h1 Iveyg Iveygnation
+				h2 I am a software developer from Moscow
 		div(class='row')
 			div(class='col-md-6 col-md-offset-3')
-				p Hello My name is Ivan 
+				div <iframe width="560" height="315" src="https://www.youtube.com/embed/VJVvc06Xl1s" frameborder="0" allowfullscreen></iframe>
