stack route population

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,9 +5,16 @@ block content
 		div(class='container')
 			ul(class='nav navbar-nav')
 				li(class='active')
-					a(href='#') Home
-				li(class='active')
-					a(href='#') Stack & Philosophy
+					a(href='/') Home
+				li(class='')
+					a(href='/stack') Stack & Philosophy
+				
+				li
+					a(href='#') Backbone
+				li
+					a(href='#') React
+				li
+					a(href='#') jQuery 
 				li(class='dropdown-toggle')
 					a(href='#') Contact
 				li(class='dropdown')
@@ -27,8 +34,8 @@ block content
 	section(class='container-fluid video-section')
 		div(class='row')
 			div(class='col-md-6 col-md-offset-3 ava')
-				img(src='http://lorempixel.com/image_output/people-q-c-661-650-8.jpg')
-				h1 Iveyg Iveygnation
+				img(src='images/vietnamise_man.jpg')
+				h1 Ivan Ivanov
 				h2 I am a software developer from Moscow
 		div(class='row')
 			div(class='col-md-6 col-md-offset-3')
