--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,14 +22,34 @@ a {
 }
 
 
-h1 {
-	font-size: 250% !important;
+
+
+.video-section h1 {
+	font-size: 250%;
 	text-align: center;
-	font-weight: 300 !important;
+	font-weight: 300;
 }
 
-h2 {
-	font-size: 180% !important;
+.video-section h2 {
+	font-size: 180%;
 	text-align: center;
-	font-weight: 100 !important;
+	font-weight: 100;
+	margin-bottom: 40px ;
+}
+
+
+/*
+* Stack Page
+*/
+
+.stack-section h1 {
+	margin: 80px 0 40px 0 ;
+
+
+}
+
+.stack-section h2 {
+	text-align: left;
+	padding-left: 20px;
+	margin-top: 30px;
 }
