--- a/views/stack.pug
+++ b/views/stack.pug
@@ -17,16 +17,16 @@ block content
 				li(class='dropdown-toggle')
 					a(href='/contact') Contact
 
-				li(class='dropdown')
-					a(class='dropdown-toggle' href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false')
-						span(class='caret') Portfolio
-					ul(class='dropdown-menu')
-						li
-							a(href='#') Another action
-						li
-							a(href='#') Action2
-						li
-							a(href='#') Action3
+				//- li(class='dropdown')
+				//- 	a(class='dropdown-toggle' href='#' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false')
+				//- 		span(class='caret') Portfolio
+				//- 	ul(class='dropdown-menu')
+				//- 		li
+				//- 			a(href='#') Another action
+				//- 		li
+				//- 			a(href='#') Action2
+				//- 		li
+				//- 			a(href='#') Action3
 
 			div(class='navbar-header')
 
