--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,7 +33,7 @@ a {
 .video-section h2 {
 	font-size: 180%;
 	text-align: center;
-	font-weight: 100;
+	font-weight: 100	;
 	margin-bottom: 40px ;
 }
 
@@ -43,12 +43,17 @@ a {
 */
 
 .stack-section h1 {
+	font-size: 250%;
+	font-weight: 300;
+	text-align: center;
 	margin: 80px 0 40px 0 ;
 
 
 }
 
 .stack-section h2 {
+	font-size: 180%;
+	font-weight: 200;
 	text-align: left;
 	padding-left: 20px;
 	margin-top: 30px;
