--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,3 +58,21 @@ a {
 	padding-left: 20px;
 	margin-top: 30px;
 }
+
+.backbone-section-header h1 {
+	font-size: 250%;
+	font-weight: 300;
+	text-align: center;
+	margin: 80px 0 40px 0 ;
+
+
+}
+
+.backbone-section-header h2 {
+	font-size: 180%;
+	font-weight: 200;
+	text-align: left;
+	padding-left: 20px;
+	margin-top: 30px;
+}
+
