--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,6 @@ block content
 				h1 Hi! My name is Ivan 
 				h2 I am a software developer from Moscow
 		div(class='row')
-			div(class='col-md-6 col-md-offset-3')
-				div <iframe width="560" height="315" src="https://www.youtube.com/embed/VJVvc06Xl1s" frameborder="0" allowfullscreen></iframe>
+			div(class='col-md-12')
+				div(class='video-div') 
+					<iframe width="560" height="315" align="middle" src="https://www.youtube.com/embed/VJVvc06Xl1s" frameborder="0" allowfullscreen></iframe>
