--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,7 +39,7 @@ html(lang="en")
 								li
 									a(href='/htmlcss/fooddelivery') Food Delivery Site
 						li(role = 'presentation' class=(selected == 'contact' ? 'active' : ''))
-							a(href='/contact') Contact + #{selected}
+							a(href='/contact') Contact
 		block content
 
 
